--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,20 @@
 {
+  "root": true,
   "env": {
     "node": true,
     "browser": true,
     "es6": true
   },
   "plugins": [
-    "security"
+    "security",
+    "@typescript-eslint"
   ],
   "extends": [
     "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:security/recommended"
   ],
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
   "rules": {
     "camelcase": "error",
     "prefer-const": [
@@ -22,7 +25,6 @@
       }
     ],
     "no-var": ["error"],
-    "no-unused-vars": ["warn"],
     "linebreak-style": ["error", "unix"],
     "indent": ["error", 2],
     "quotes": ["error", "single"],
