--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "flcss",
-  "version": "0.1.3",
+  "version": "2.0.0-0",
   "description": "A bad attempt at CSS-in-JS",
   "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "prepare": "npm run build",
-    "prepublishOnly": "npm version patch",
-    "build": "rm -rf ./build && mkdir ./build && babel -d ./build ./src"
+    "watch": "npx tsc --lib es2015,dom -w -d src/*.ts --outDir build",
+    "build": "rm -rf ./build && mkdir ./build && npx tsc --lib es2015,dom --removeComments -d src/*.ts --outDir build"
   },
   "repository": {
     "type": "git",
@@ -21,12 +22,15 @@
     "url": "https://github.com/ker0olos/flcss/issues"
   },
   "homepage": "https://github.com/ker0olos/flcss#readme",
+  "dependencies": {
+    "construct-style-sheets-polyfill": "^2.4.0",
+    "csstype": "^3.0.3"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-security": "^1.4.0"
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.7.0",
+    "eslint-plugin-security": "^1.4.0",
+    "typescript": "^4.0.2"
   }
 }
