--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "prepare": "npm run build",
     "watch": "npx tsc --lib es2015,dom -w -d src/*.ts --outDir build",
-    "build": "rm -rf ./build && mkdir ./build && npx tsc --lib es2015,dom --removeComments -d src/*.ts --outDir build"
+    "build": "rm -rf ./build && mkdir ./build && npx tsc --lib es2015,dom --removeComments -d src/*.ts --outDir build",
+    "test": "jest",
+    "test:coverage": "jest --collect-coverage"
   },
   "repository": {
     "type": "git",
@@ -27,10 +29,13 @@
     "csstype": "^3.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.10",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
     "eslint-plugin-security": "^1.4.0",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
   }
 }
