--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "build/index.d.ts",
   "scripts": {
     "prepare": "npm run build",
+    "prepublishOnly": "npm version patch",
     "watch": "npx tsc --lib es2015,dom -w -d src/*.ts --outDir build",
     "build": "rm -rf ./build && mkdir ./build && npx tsc --lib es2015,dom --removeComments -d src/*.ts --outDir build",
     "test": "jest",
