--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flcss",
-  "version": "2.1.0-0",
+  "version": "2.2.0-0",
   "description": "A bad attempt at CSS-in-JS",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -16,7 +16,8 @@
     "url": "git+https://github.com/ker0olos/flcss.git"
   },
   "keywords": [
-    "css-in-js"
+    "css-in-js",
+    "css"
   ],
   "author": "Kerolos Zaki",
   "license": "MIT",
@@ -29,10 +30,11 @@
     "csstype": "^3.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "eslint": "^7.7.0",
+    "@types/jest": "^26.0.12",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "eslint": "^7.8.0",
+    "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-security": "^1.4.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.3.0",
