--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,10 @@
-name: test
+name: Testing
 
 on:
   push:
-    branches:
-    - master
+    branches: [master]
+  pull_request:
+    branches: [master]
     
 jobs:
   all:
