--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flcss",
-  "version": "2.2.3-0",
+  "version": "2.2.4",
   "description": "A bad attempt at CSS-in-JS",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -27,17 +27,17 @@
   "homepage": "https://github.com/ker0olos/flcss#readme",
   "dependencies": {
     "construct-style-sheets-polyfill": "^2.4.2",
-    "csstype": "^3.0.3"
+    "csstype": "^3.0.4"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "eslint": "^7.10.0",
-    "eslint-plugin-jest": "^24.0.2",
+    "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "eslint": "^7.12.0",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.4.0",
+    "jest": "^26.6.1",
+    "ts-jest": "^26.4.2",
     "typescript": "^4.0.3"
   }
 }
