--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "flcss",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "description": "A bad attempt at CSS-in-JS",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
     "prepare": "npm run build",
-    "watch": "npx tsc --lib es2015,dom -w -d src/*.ts --outDir build",
-    "build": "rm -rf ./build && mkdir ./build && npx tsc --lib es2015,dom --removeComments -d src/*.ts --outDir build",
+    "watch": "npx tsc -p tsconfig.json --watch",
+    "build": "rm -rf ./build && mkdir ./build && npx tsc -p tsconfig.json --removeComments",
     "test": "jest",
     "test:coverage": "jest --collect-coverage"
   },
@@ -26,18 +26,18 @@
   },
   "homepage": "https://github.com/ker0olos/flcss#readme",
   "dependencies": {
-    "construct-style-sheets-polyfill": "^2.4.6",
-    "csstype": "^3.0.6"
+    "construct-style-sheets-polyfill": "^2.4.16",
+    "csstype": "^3.0.8"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.18.0",
-    "eslint-plugin-jest": "^24.1.3",
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "eslint": "^7.29.0",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-security": "^1.4.0",
     "jest": "^26.6.3",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3"
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.3.4"
   }
 }
