--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,8 @@ name: Testing
 
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+    branches:
+    - main
     
 jobs:
   all:
