--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flcss",
-  "version": "2.2.7",
-  "description": "A bad attempt at CSS-in-JS",
+  "version": "2.3.0",
+  "description": "A attempt at CSS-in-JS",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
@@ -26,18 +26,18 @@
   },
   "homepage": "https://github.com/ker0olos/flcss#readme",
   "dependencies": {
-    "construct-style-sheets-polyfill": "^2.4.16",
-    "csstype": "^3.0.8"
+    "construct-style-sheets-polyfill": "^3.0.5",
+    "csstype": "^3.0.10"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
-    "eslint": "^7.29.0",
-    "eslint-plugin-jest": "^24.3.6",
+    "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-security": "^1.4.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.3.4"
+    "typescript": "^4.5.4"
   }
 }
