--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "flcss",
-  "version": "2.3.0",
+  "version": "2.4.0-0",
   "description": "A attempt at CSS-in-JS",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "prepare": "npm run build",
     "watch": "npx tsc -p tsconfig.json --watch",
-    "build": "rm -rf ./build && mkdir ./build && npx tsc -p tsconfig.json --removeComments",
+    "build": "npx tsc -p tsconfig.json --removeComments",
     "test": "jest",
     "test:coverage": "jest --collect-coverage"
   },
@@ -29,15 +29,19 @@
     "construct-style-sheets-polyfill": "^3.0.5",
     "csstype": "^3.0.10"
   },
+  "optionalDependencies": {
+    "react": "^17.0.2"
+  },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
     "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-security": "^1.4.0",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.6",
+    "jest": "^27.4.7",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.4"
   }
 }
