--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,15 @@
   "include": ["src/*"],
   "exclude": ["node_modules"],
   "compilerOptions": {
-    "outDir": "build",
-    "lib": ["ES2015","DOM",],
+    "outDir": ".",
+    "target": "ES6",
+    "lib": ["ES6", "ES5", "ES7", "DOM"],
+    "moduleResolution": "Node",
     "types": [ "jest", "node" ],
+    "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "sourceMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   }
 }
