--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,22 +1,23 @@
-name: Testing
+name: unit-tests
 
 on:
+  pull_request:
   push:
     branches:
     - main
     
 jobs:
-  Jest:
+  jest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
         with:
-          node-version: '14.x'
+          node-version: '16.x'
       - name: Install Dependencies
-        run: npm ci
+        run: yarn ci
       - name: Run Tests
-        run: npm run test:coverage
+        run: yarn jest --collect-coverage
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1.0.12
         with:
