--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "flcss",
-  "version": "2.5.0",
+  "version": "2.6.0",
   "type": "module",
   "description": "A bleeding-edge CSS-in-JS library",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "prepare": "npm run build",
-    "watch": "npx tsc -p tsconfig.json --watch",
-    "build": "npx tsc -p tsconfig.json --removeComments",
-    "test": "jest",
-    "test:coverage": "jest --collect-coverage"
+    "prepublishOnly": "yarn build",
+    "dev": "tsc -p tsconfig.json --watch",
+    "build": "tsc -p tsconfig.json --removeComments",
+    "might-tests": "docker compose run web might",
+    "unit-tests": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/ker0olos/flcss#readme",
   "dependencies": {
-    "construct-style-sheets-polyfill": "^3.0.5",
+    "construct-style-sheets-polyfill": "^3.1.0",
     "csstype": "^3.0.10"
   },
   "optionalDependencies": {
@@ -36,14 +36,17 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-plugin-jest": "^25.3.4",
+    "@types/react": "^17.0.39",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "^8.8.0",
+    "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "jest": "^27.4.7",
+    "jest": "^27.5.0",
+    "might-cli": "4.0.2",
+    "might-ui": "^1.1.8",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5",
+    "vite": "^2.7.13"
   }
 }
