--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,18 @@
   "compilerOptions": {
     "outDir": ".",
     "target": "ES6",
-    "lib": ["ES6", "ES5", "ES7", "DOM"],
-    "moduleResolution": "Node",
+    "lib": ["ES5", "ES6", "ES7", "DOM"],
+    "moduleResolution": "node",
     "types": [ "jest", "node" ],
-    "forceConsistentCasingInFileNames": true,
-    "declaration": true,
+    "allowJs": false,
     "sourceMap": true,
+    "declaration": true,
+    "skipLibCheck": false,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": false,
+    "isolatedModules": false,
+    "noEmit": false
   }
 }
