--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '16.x'
       - name: Install Dependencies
-        run: yarn ci
+        run: yarn
       - name: Run Tests
         run: yarn jest --collect-coverage
       - name: Upload coverage to Codecov
