--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:focal
-      options: --user might
+      options: --user 1001
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
